--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "openmeteo": "^1.2.0",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
+    "react-icons": "4.2.0",
     "react-leaflet": "^5.0.0-rc.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.19",
